<resources>
    <string name="app_name">Environmental News</string>
    <string name="settings_title">Settings</string>
    
    <string name="settings_environment">Environment</string>
    <string name="settings_books">Books</string>
    <string name="settings_economy">Economy</string>
    <string name="settings_technology">Technology</string>
    <string name="settings_science">Science</string>

    <string name="section_key_environment">environment</string>
    <string name="section_key_books">books</string>
    <string name="section_key_economy">economy</string>
    <string name="section_key_technology">technology</string>
    <string name="section_key_science">science</string>

    <string name="section_key">sections</string>
    <string name="api_key">api-key</string>
    <string name="api_key_value">3fe2484b-9a0f-4029-a280-c1e7911e5d77</string>
    <string name="show_fields_key">show-fields</string>
    <string name="byline">byline</string>
    <string name="query">q</string>

    <string name="MainActivity">NewsActivity</string>
    <string name="no_internet">There\'s no internet connection</string>
    <string name="no_date">Publication date is not available</string>
    <string name="no_author">Unknown author</string>
    <string name="no_connection">There\'s no connection. Response code: </string>

    <string name="JSON_response">response</string>
    <string name="JSON_results">results</string>
    <string name="JSON_webTitle">webTitle</string>
    <string name="JSON_webUrl">webUrl</string>
    <string name="JSON_sectionName">sectionName</string>
    <string name="JSON_pubDate">webPublicationDate</string>
    <string name="JSON_fields">fields</string>
    <string name="JSON_byline">byline</string>

    <string name="Util">Utils.class</string>
    <string name="error_getDateFromApi">There\'s something wrong in getDataFromAPI method</string>
    <string name="error_url">Something wrong with creating URL</string>
    <string name="error_makeHttpRequest">Error in the makeHttpRequest() method</string>
    <string name="error_readFromStream">There\'s something wrong with readFromStream method</string>
    <string name="connection_code">Connection code: </string>
    <string name="request_method">GET</string>

    <string name="url_endpoint">https://content.guardianapis.com/search</string>

</resources>
