<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/section_key"
    android:title="@string/settings_title"
    >

    <SwitchPreference
        android:key="@string/section_key_technology"
        android:title="@string/settings_technology"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="@string/section_key_science"
        android:title="@string/settings_science"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="@string/section_key_environment"
        android:title="@string/settings_environment"
        android:defaultValue="true"/>

    <SwitchPreference
        android:key="@string/section_key_economy"
        android:title="@string/settings_economy"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="@string/section_key_books"
        android:title="@string/settings_books"
        android:defaultValue="false"/>

</PreferenceScreen>